Update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
     </header>
     <main>
-        <section1>
+        <section>
            <div class="part-1">
                 <div id="to-the-left"> 
                     <p class="hero-main-text">This website is awesome</p>
@@ -25,28 +25,56 @@
                         This website is some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
                     </p>
                    
-                    <button>Sign up</button>
+                    <button class="first-button">Sign up</button>
                 </div>     
                     <div class="img">
                         <p>this is a placeholder for an image</p>
                     </div>     
            </div>  
-        </section1>
-        <section2>
-           <div class="parent-container">
-                <p class="random-text">Some random information</p>
-                <div class="child-container">
-                    <div></div>
-                    <p class="sub-text">this is some subtext under an illustration or image</p>
-                    <div></div>
-                    <p class="rsub-text">this is some subtext under an illustration or image</p>
-                    <div></div>
-                    <p class="rsub-text">this is some subtext under an illustration or image</p>
-                    <div></div>
-                    <p class="rsub-text">this is some subtext under an illustration or image</p>
+        </section>
+
+        <section class="part-2">
+           <div class="title">Some random information</div>
+
+           <div class="container">
+            <div class="info">
+                <div class="empty-box"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="empty-box"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="empty-box"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="info">
+                <div class="empty-box"></div>
+                <div class="text">this is some subtext under an illustration or image</div>
+            </div>
+           </div>
+        </section>
+
+        <section>
+            <div class="quote-container">
+                <div class="quote">
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+                    <p class="author">- Thor, God of Thunder</p>
                 </div>
-            </div> 
-        </section2>
+            </div>
+        </section>
+
+        <section>
+            <div class="last-container">
+                <div class="action">
+                    <div class="call-text">Call to action! It's time!</div>
+                    <div class="last-text">Sign up for our product by clicking that button right over there!</div>
+                    <button class="last-button">Sign up</button>
+                </div>
+                
+            </div>
+        </section>
     </main>
 </body>
 </html>
